--- a/portfolio/stylesheet.css
+++ b/portfolio/stylesheet.css
@@ -300,7 +300,7 @@ section {
     border-radius: 10px;
     width: 100%;
     height: 5px;
-    background-color: #000000;
+    background-color: #052d45;
     /* animation: animate 1s cubic-bezier(1, 0, 0, 5, 1) forwards;
     transform: scaleX(0);
     transform-origin: left; */
@@ -349,7 +349,7 @@ section {
 .progress-line span::after {
     position: absolute;
     padding: 1px 8px;
-    background-color: #000;
+    background-color: #052d45;
     color: #fff;
     font-size: 12px;
     border-radius: 3px;
@@ -391,7 +391,7 @@ section {
     border: 7px solid transparent;
     border-bottom-width: 0px;
     border-right-width: 0px;
-    border-top-color: #000;
+    border-top-color: #052d45;
     top: -10px;
     right: 0;
     animation: showText 0.5s 1s linear forwards;
@@ -430,7 +430,7 @@ section {
 
 .radial-bars .radial-bar .progress-bar {
     stroke-width: 10;
-    stroke: black;
+    stroke: #052d45;
     fill: transparent;
     stroke-dasharray: 502;
     stroke-dashoffset: 502;
